<resources>
    <string name="app_name">RideShare</string>
    <string name="new_user">New user ?</string>
    <string name="create_account">Create Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="vehicle_type">Type of Vehicle</string>
    <string name="rideshare">RideShare</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_trip">Create a Trip</string>
</resources>