<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/black_alpha_50"
    tools:context=".ui.TravelerFragment">

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:backgroundTint="@android:color/holo_red_light"
        android:fontFamily="@font/roboto"
        android:hint="@string/first_name"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:backgroundTint="@android:color/holo_red_light"
        android:fontFamily="@font/roboto"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/pnumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:backgroundTint="@android:color/holo_red_light"
        android:fontFamily="@font/roboto"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:backgroundTint="@android:color/holo_red_light"
        android:fontFamily="@font/roboto"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/pword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:backgroundTint="@android:color/holo_red_light"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

</LinearLayout>